syntax = "proto3";

package sum;

message Sum {
  int32 first_number = 1;
  int32 second_number = 2;

}

message SumRequest{
  Sum sum = 1;
}

message SumResponse {
  int32 sum_result = 1;
}

service SumService {
  rpc DoSum(SumRequest) returns (SumResponse) {};
}



